--- a/browser/js/login/login.html
+++ b/browser/js/login/login.html
@@ -1,16 +1,39 @@
-<form id="login-form" name="loginForm" ng-submit="loginForm.$valid && sendLogin(login)">
+<div class="col-md-6 col-xs-12">
+  <h2>Log In</h2>
+  <form id="login-form" name="loginForm" ng-submit="loginForm.$valid && sendLogin(login)">
 
     <alert type="danger" ng-show="error">
-        {{ error }}
+      {{ error }}
     </alert>
 
     <div class="form-group">
-        <label for="email">Email address</label>
-        <input type="text" ng-model="login.email" class="form-control" id="email" placeholder="Enter email">
+      <label for="email">Email address</label>
+      <input type="text" ng-model="login.email" class="form-control" id="email" placeholder="Enter email">
     </div>
     <div class="form-group">
-        <label for="login-password">Password</label>
-        <input type="password" ng-model="login.password" class="form-control" id="login-password" placeholder="Password">
+      <label for="login-password">Password</label>
+      <input type="password" ng-model="login.password" class="form-control" id="login-password" placeholder="Password">
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
-</form>
+  </form>
+</div>
+
+<div class="col-md-6 col-xs-12">
+  <h2>Sign up</h2>
+  <form id="signup-form" name="signupForm" ng-submit="signupForm.$valid && sendSignup(signup)">
+
+    <alert type="danger" ng-show="signupError">
+      {{ signupError }}
+    </alert>
+
+    <div class="form-group">
+      <label for="email">Email address</label>
+      <input type="text" ng-model="signup.email" class="form-control" id="email" placeholder="Enter email">
+    </div>
+    <div class="form-group">
+      <label for="login-password">Password</label>
+      <input type="password" ng-model="signup.password" class="form-control" id="login-password" placeholder="Password">
+    </div>
+    <button type="submit" class="btn btn-default">Submit</button>
+  </form>
+</div>
