--- a/browser/js/login/reset.html
+++ b/browser/js/login/reset.html
@@ -12,7 +12,7 @@
     </div>
     <div class="form-group">
       <label for="email">Old Password</label>
-      <input type="text" ng-model="reset.oldPassword" class="form-control" id="oldPassword" placeholder="Password" required="true">
+      <input type="password" ng-model="reset.oldPassword" class="form-control" id="oldPassword" placeholder="Password" required="true">
     </div>
     <div class="form-group">
       <label for="reset-password">Password</label>
@@ -20,5 +20,5 @@
     </div>
     <button type="submit" ng-disabled="!resetForm.$valid" class="btn btn-default">Submit</button>
   </form>
-  <pre>{{ resetForm | json }}</pre>
+  <!-- <pre>{{ resetForm | json }}</pre> -->
 </div>
