--- a/browser/js/login/login.html
+++ b/browser/js/login/login.html
@@ -1,4 +1,4 @@
-<div class="col-md-6 col-xs-12">
+<div class="col-md-4 col-xs-12">
   <h2>Log In</h2>
   <form id="login-form" name="loginForm" ng-submit="loginForm.$valid && sendLogin(login)">
 
@@ -18,8 +18,8 @@
   </form>
 </div>
 
-<div class="col-md-6 col-xs-12">
-  <h2>Sign up</h2>
+<div class="col-md-4 col-xs-12">
+  <h2>Sign up with us</h2>
   <form id="signup-form" name="signupForm" ng-submit="signupForm.$valid && sendSignup(signup)">
 
     <alert type="danger" ng-show="signupError">
@@ -36,4 +36,11 @@
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
+</div>
+
+<div class="col-md-4 col-xs-12">
+  <h2>Connect through a partner</h2>
+    <a href="/auth/google" target="_blank">
+      <button type="submit" class="btn btn-default">Connect via Google</button>
+    </a>
 </div>
