--- a/browser/js/reviews/reviews.directive.html
+++ b/browser/js/reviews/reviews.directive.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
 
-</body>
-</html>
+<div class="item col-md-6" >
+    <div ng-repeat="(key, item) in review">
+        <h5>{{key}} : {{item}}</h5>
+        <!--<h3> {{item.author}} said: {{item.body}} </h3>-->
+        <!--<h3> item.stars</h3>-->
+    </div>
+
+</div>
