--- a/browser/js/reviews/reviews.html
+++ b/browser/js/reviews/reviews.html
@@ -3,7 +3,7 @@
         <h1>Review List</h1>
         <h2>{{product.name}}</h2>
         <div ng-repeat = "review in product.reviews">
-            <review-list review = "review"></review-list>
+            <review-list review = "review" readonly="rating.isReadOnly"></review-list>
 
             <!--<li ng-repeat="product in products">-->
             <!--<a ui-sref='productDetail({ id: product._id })'>{{product.name}}</a></li>-->
