--- a/browser/js/products/product.list.directive.html
+++ b/browser/js/products/product.list.directive.html
@@ -1,7 +1,7 @@
 
 <div class="item col-md-6" >
     <h1>
-        <img src="{{product.image}}" alt="Smiley face" height="42" width="42">
+        <img src="{{product.image}}" alt="{{ product.name }}" height="42" width="42">
         <a ui-sref='productDetail({ id: product._id })'>{{product.name}}</a>
     </h1>
     <h4>Price: {{product.price | currency}}</h4>
@@ -12,5 +12,5 @@
     <h4 ng-repeat="category in product.category">
         {{category}}
     </h4>
-
+    <button type="submit" ng-click="add(product._id)">Add to Cart</button>
 </div>
