--- a/browser/js/products/product.list.html
+++ b/browser/js/products/product.list.html
@@ -1,10 +1,8 @@
 <div class="product-container">
-    <div>
-        <h1>Product List</h1>
-        <div ng-repeat = "product in products">
-        <product-list product = "product"></product-list>
-
-           <!--<li ng-repeat="product in products">-->
-               <!--<a ui-sref='productDetail({ id: product._id })'>{{product.name}}</a></li>-->
+  <div>
+    <h1>Product List</h1>
+    <div ng-repeat="product in products">
+      <product-list product="product"></product-list>
     </div>
+  </div>
 </div>
