basic admin-user-item directive in place

--- a/browser/js/admin/admin-panel.html
+++ b/browser/js/admin/admin-panel.html
@@ -1,15 +1,14 @@
 <div class="product-container">
   <div>
     <h1>Admin Panel</h1>
-    <pre>
+    <!-- <pre>
 		 {{users | json}}
-    </pre>
+    </pre> -->
 
-    heeyyyy!!
-    <!-- <div ng-repeat="user in users">
-      <admin-user-list user="user"></product-list>
+    <div ng-repeat="user in users">
+      <user-item user="user"></product-list>
     </div>
-    <div ng-repeat="order in orders">
+    <!-- <div ng-repeat="order in orders">
       <admin-order-list product="product"></product-list>
     </div> -->
   </div>
