--- a/browser/js/products/product.list.html
+++ b/browser/js/products/product.list.html
@@ -1,6 +1,12 @@
 <div class="product-container">
   <div>
     <h1>Product List</h1>
+      <button
+              ng-repeat="category in categories"
+              class="category-button"
+              ng-click="filterByCategory(category)"
+              ng-class="{active: activeCat == category}">{{ category }}
+      </button>
     <div ng-repeat="product in products">
       <product-list product="product"></product-list>
     </div>
