Heading to class

--- a/browser/js/admin/admin-panel-items/user-item/user.item.html
+++ b/browser/js/admin/admin-panel-items/user-item/user.item.html
@@ -1,5 +1,5 @@
 <div class="item col-md-6">
-    <a ui-sref='user({ id: user._id })'>{{user.email}}</a>
+    <a ui-sref='userDetail({ id: user._id })'>{{user.email}}</a>
 </div>
 
 
