--- a/browser/js/products/product.list.directive.html
+++ b/browser/js/products/product.list.directive.html
@@ -1,5 +1,5 @@
 
-<div class="item col-md-6" >
+<div class = col-lg-3 >
     <h1>
         <img src="{{product.image}}" alt="{{ product.name }}" height="42" width="42">
         <a ui-sref='productDetail({ id: product._id })'>{{product.name}}</a>
