--- a/browser/js/admin/admin-panel.html
+++ b/browser/js/admin/admin-panel.html
@@ -1,9 +1,18 @@
 <div class="product-container">
   <div>
     <h1>Admin Panel</h1>
-      <div class="cb" ng-click="showDetails = 'orders'">Orders</div>
-      <div class="cb" ng-click="showDetails = 'users'">Users</div>
-      <div class="cb" ng-click="showDetails = 'products'">Products</div>
+      <ul class="nav nav-pills">
+          <li class="cb" ng-click="showDetails = 'orders'">
+              <a>Orders</a>
+          </li>
+          <li class="cb" ng-click="showDetails = 'users'">
+              <a>Users</a>
+          </li>
+          <li class="cb" ng-click="showDetails = 'products'">
+              <a>Products</a>
+          </li>
+      </ul>
+
 
     <div class="panel panel-info" ng-show="(showDetails=='orders')">
         <div class="panel-heading">
@@ -16,7 +25,7 @@
 
     <div class="panel panel-info" ng-show="(showDetails=='users')">
         <div class="panel-heading">
-          <h3 class="panel-title">users</h3>
+          <h3 class="panel-title">Users</h3>
         </div>
         <div class="panel-body" ng-repeat="user in users">
           <user-item user="user"></user-item>
@@ -27,8 +36,34 @@
           <div class="panel-heading">
               <h3 class="panel-title">Product Management</h3>
           </div>
-          <div  ng-repeat="product in products | orderBy:'name'">
-            <product-item product="product"></product-item>
+          <div class="container">
+            <input class="glyphicon glyphicon-search" type="text" placeholder="Search" ng-model="productSearch">
+          </div>
+          <a class="btn" data-toggle="modal" href="#myModal">Launch Modal</a>
+
+
+          <div class="modal hide" id="myModal">
+              <div class="modal-header">
+                  <button class="close" data-dismiss="modal">×</button>
+                  <h3>Modal header</h3>
+              </div>
+              <div class="modal-body">
+                  <p>One fine body…</p>
+              </div>
+              <div class="modal-footer">
+                  <a href="#" class="btn" data-dismiss="modal">Close</a>
+                  <a href="#" class="btn btn-primary">Save changes</a>
+              </div>
+          </div>
+
+
+          <div  ng-repeat="product in products | orderBy:'name' | filter: productSearch ">
+              <div class = 'row container'>
+              <h3>{{product.name}}</h3>
+              <button class ="btn-danger" ng-click="deleteProduct(product)">Delete</button>
+              </div>
+            <product-item  ng-show="product" product="product"></product-item>
+
           </div>
       </div>
 
