--- a/browser/js/products/product.list.directive.html
+++ b/browser/js/products/product.list.directive.html
@@ -1,7 +1,7 @@
 
 <div class = col-lg-3 >
     <h1>
-        <img src="{{product.image}}" alt="{{ product.name }}" height="42" width="42">
+        <img src="{{product.image[0]}}" alt="{{ product.name }}" height="42" width="42">
         <a ui-sref='productDetail({ id: product._id })'>{{product.name}}</a>
     </h1>
     <h4>Price: {{product.price | currency}}</h4>
