--- a/emails/template.html
+++ b/emails/template.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="viewport" content="width=device-width">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width">
 
   <style>
 @media only screen and (max-width:600px) {
@@ -106,9 +106,9 @@
 </style>
 </head>
 <body>
-	<table class="body">
-		<tr>
-			<td class="center" align="center" valign="top">
+  <table class="body">
+    <tr>
+      <td class="center" align="center" valign="top">
         <center>
 
 
@@ -125,10 +125,10 @@
                           <tr>
 
                             <td class="six sub-columns">
-                              <img src="http://placehold.it/200x50">
+                              <!-- <img src="http://placehold.it/200x50"> -->
                             </td>
                             <td class="six sub-columns last" align="right" style="text-align:right; vertical-align:middle;">
-                              <span class="template-label">HERO</span>
+                              <span class="template-label">Jawa Trader</span>
                             </td>
                             <td class="expander"></td>
 
@@ -159,9 +159,9 @@
                           <td>
 
                             <h1>Hey, {{name}}</h1>
-                						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
-                						<img width="580" height="300" src="http://placehold.it/580x300">
-
+                            <p class="lead">Thank you for your purchase.</p>
+                            
+                            
                           </td>
                           <td class="expander"></td>
                         </tr>
@@ -179,7 +179,7 @@
                         <tr>
                           <td class="panel">
 
-                            <p>Phasellus dictum sapien a neque luctus cursus. Pellentesque sem dolor, fringilla et pharetra vitae. <a href="#">Click it! »</a></p>
+                            <p>We're speeding your purchase to you. Track it here: <a href="#">Click it! »</a></p>
 
                           </td>
                           <td class="expander"></td>
@@ -198,8 +198,11 @@
                         <tr>
                           <td>
 
-                            <h3>Title Ipsum <small>This is a note.</small></h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <h3>Your Order </h3>
+
+                            {% for item in items %}
+                              <p>{{ item }}</p>
+                            {% endfor %}
 
                           </td>
                           <td class="expander"></td>
@@ -288,7 +291,7 @@
                           <td class="last right-text-pad">
                             <h5>Contact Info:</h5>
                             <p>Phone: 408.341.0600</p>
-                            <p>Email: <a href="mailto:hseldon@trantor.com">hseldon@trantor.com</a></p>
+                            <p>Email: <a href="mailto:team.brotein@gmail.com">team.brotein@gmail.com</a></p>
                           </td>
                           <td class="expander"></td>
                         </tr>
@@ -324,9 +327,9 @@
           </table>
 
         </center>
-			</td>
-		</tr>
-	</table>
+      </td>
+    </tr>
+  </table>
 </body>
 </html>
 
