--- a/browser/js/admin/admin-panel-items/product-item/product.item.html
+++ b/browser/js/admin/admin-panel-items/product-item/product.item.html
@@ -2,14 +2,12 @@
 <!--<a ui-sref="orderDetail({ id: order._id })">order #:{{order._id}}</a>-->
 <!--<a ui-sref="userDetail({ id: order.user })">user:{{order.user}}</a>-->
 <div class="container">
-    <select >
-        <option ng-repeat="category in product.category" value="{{category}}">{{category}}<button class= "btn-success">ok</button></option>
-    </select>
+   <p><i>Click Any Property Value To Edit</i></p>
 
     <table border="1" class="table table-hover">
         <thead>
         <tr>
-            <th>Key</th>
+            <th>Property</th>
             <th>Value</th>
         </tr>
         </thead>
@@ -20,7 +18,7 @@
             <td>
                 <span ng-click="editing = true; original=value" ng-hide="editing" ng-bind="value"></span>
                 <input ng-model="value" ng-show="editing" />
-                <button class= "btn-success" ng-click="editProduct(product._id, key, value); editing=false"  ng-show="editing">ok</button>
+                <button class= "btn-success" ng-click="editProduct(product._id, key, value); editing=false" ng-show="editing">ok</button>
                 <button class ="btn-danger" ng-show="editing" ng-click="editing = false; value=original">Cancel</button>
             </td>
 
