--- a/browser/js/checkout/shipping.info.html
+++ b/browser/js/checkout/shipping.info.html
@@ -1,6 +1,6 @@
 <div class="col-md-4">
   <h3>Shipping Address</h3>
-  <form id="billingAddress" name="shippingAddressForm">
+  <form id="shippingAddress" name="shippingAddressForm">
 
     <alert type="danger" ng-show="error">
       {{ error }}
@@ -8,37 +8,35 @@
 
     <div class="form-group">
       <label for="line1">Address</label>
-      <input type="text" ng-model="shippingAddress.line1" class="form-control" id="addressLine1" placeholder="Address Line 1">
-      <input type="text" ng-model="shippingAddress.line2" class="form-control" id="addressLine2" placeholder="Address Line 2">
-<!--     </div>
-    <div class="form-inline"> -->
+      <input type="text" ng-model="shippingAddress.line1" class="form-control" id="shippingAddressLine1" placeholder="Address Line 1">
+      <input type="text" ng-model="shippingAddress.line2" class="form-control" id="shippingAddressLine2" placeholder="Address Line 2">
       <label for="city">City</label>
-      <input type="text" ng-model="shippingAddress.city" class="form-control" id="addressCity" placeholder="City">
+      <input type="text" ng-model="shippingAddress.city" class="form-control" id="shippingAddressLineCity" placeholder="City">
       <label for="state">State</label>
-      <input type="text" ng-model="shippingAddress.state" class="form-control" id="addressState" placeholder="State">
+      <input type="text" ng-model="shippingAddress.state" class="form-control" id="sippingAddressState" placeholder="State">
       <label for="zip">Zip</label>
-      <input type="text" ng-model="shippingAddress.zip" class="form-control" id="addressState" placeholder="Zip">
+      <input type="text" ng-model="shippingAddress.zip" class="form-control" id="shippingAddressZip" placeholder="Zip">
     </div>
   </form>
+  {{ shippingAddress | json}}
 </div>
 
-<!-- <div class="col-md-4">
+<div class="col-md-4">
   <h3>Billing Address</h3>
-  <form id="addressForm" name="addressForm">
-
-
+  <form id="billingAddress" name="billingAddressForm">
     <div class="form-group">
       <label for="line1">Address</label>
       <input type="text" ng-model="billingAddress.line1" class="form-control" id="addressLine1" placeholder="Address Line 1">
       <input type="text" ng-model="billingAddress.line2" class="form-control" id="addressLine2" placeholder="Address Line 2">
-    </div>
-    <div class="form-inline">
       <label for="city">City</label>
       <input type="text" ng-model="billingAddress.city" class="form-control" id="addressCity" placeholder="City">
       <label for="state">State</label>
       <input type="text" ng-model="billingAddress.state" class="form-control" id="addressState" placeholder="State">
       <label for="zip">Zip</label>
-      <input type="text" ng-model="billingAddress.zip" class="form-control" id="addressState" placeholder="Zip">
+      <input type="text" ng-model="billingAddress.zip" class="form-control" id="addressZip" placeholder="Zip">
     </div>
+    <button type="button" ng-click="copyShipping()">Same as shipping</button>
   </form>
-</div> -->
+  {{ billingAddress | json }}
+    <button type="button" ng-click="click()">Continue</button>
+</div>
