--- a/browser/js/admin/admin-panel.html
+++ b/browser/js/admin/admin-panel.html
@@ -18,7 +18,20 @@
             <div class="panel-heading">
                 <h3 class="panel-title">Orders</h3>
             </div>
-            <div class="panel-body" ng-repeat="order in orders">
+            <div class="row">
+                    <div class="col-xs-2" style="margin: 30px">
+                        <label for="filter">Filter By Status</label>
+                        <select name="filter" id="filter" class="form-control" ng-model="sortBy">
+                            <option value="">All</option>
+                            <option value="cart">Cart</option>
+                            <option value="created">Created</option>
+                            <option value="processing">Processing</option>
+                            <option value="completed">Completed</option>
+                            <option value="cancelled">Cancelled</option>
+                        </select>
+                    </div>
+            </div>
+            <div class="panel-body" ng-repeat="order in orders | filter: sortBy ">
                 <order-item order="order"></order-item>
             </div>
         </div>
