--- a/browser/js/accountmgmt/accountOverview.html
+++ b/browser/js/accountmgmt/accountOverview.html
@@ -1,2 +1,19 @@
-{{ me }}
-{{asdf}}
+<div class="product-container">
+  <div>
+    <h1>Account Management</h1>
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <h3 class="panel-title">User Info</h3>
+      </div>
+      <div class="row">
+        <div class="panel-body">
+          Email: {{ me.email }}
+          <br>
+          ID: {{me._id}}
+          <div ng-show="!!me.isAdmin">You are an administrator</div>
+          {{orders}}
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
