added angular payments

--- a/browser/js/checkout/addressForms.html
+++ b/browser/js/checkout/addressForms.html
@@ -38,5 +38,5 @@
     <button type="button" ng-click="copyShipping()">Same as shipping</button>
   </form>
   {{ billingAddress | json }}
-    <button type="button" ng-click="click()">Continue</button>
+    <button type="button" ng-click="confirmAddress()">Continue</button>
 </div>
