--- a/browser/js/cart/cart-view.html
+++ b/browser/js/cart/cart-view.html
@@ -6,21 +6,33 @@
 		<tr>
 			<th></th>
             <th></th>
+            <th></th>
             <th>Quantity</th>
             <th>Amount</th>
             <th>Total</th>
 		</tr>
 	</thead>
 	<tbody>
-		<tr>
-			<td></td>
-		</tr>
+		<tr ng-repeat="item in cart.items track by $index">
+            <td><span ng-click="" class="glyphicon glyphicon-remove"></span></td>
+
+            <td>{{item.product.name}}</td>
+            <td>{{item.product.type}}</td>
+            <td><span class="glyphicon glyphicon-minus" ></span>
+            	&nbsp;&nbsp;{{item.quantity | number}}&nbsp;&nbsp;
+                <span class="glyphicon glyphicon-plus" ng-click="item.setQuantity(1, true)"></span></td>
+            <td>{{ item.unitPrice | currency}}</td>
+            <td>{{ cart.total | currency }}</td>
+        </tr>
+		
 	</tbody>
 
 	<tfoot>
-		
 		<tr>
 			<td>Total:</td>
+		</tr>
+		<tr>
+			<td>{{cart.total | currency}}</td>
 		</tr>
 	</tfoot>
 </table>
@@ -28,5 +40,5 @@
 
 <pre>
 	
-	{{cart.items | json}}
+	{{cart | json}}
 </pre>
