issues injectng OrderController to cancel button directive

--- a/browser/js/accountmgmt/cancelorder.directive.html
+++ b/browser/js/accountmgmt/cancelorder.directive.html
@@ -1,5 +1,5 @@
 <button class="btn btn-danger"
   ng-show="order.status==='created' || order.status==='processing'"
-  ng-click="">
+  ng-click="cancel()">
   Cancel Order
 </button>
