--- a/browser/js/admin/order-detail/order.detail.html
+++ b/browser/js/admin/order-detail/order.detail.html
@@ -1,14 +1,17 @@
 <div>
+    <span class="glyphicon glyphicon-menu-left" aria-hidden="true">
+        <a ui-sref="admin-panel">Back</a>
+    </span>
   <h2>Order Detail</h2>
 
     <div class="col-md-10">
         <ul class="list-group">
-            <li class="list-group-item"> Order #:  {{order._id}}</li>
-            <li class="list-group-item"> User:     {{order.user}}</li>
-            <li class="list-group-item"> Status: {{order.status}}</li>
+            <li class="list-group-item"><b>Order #:</b>  {{order._id}}</li>
+            <li class="list-group-item"><b>User:</b>     {{order.user}}</li>
+            <li class="list-group-item"><b>Status:</b> {{order.status}}</li>
             <li class="list-group-item">
                 <form name="orderStatusForm" ng-submit="updateOrder(orderStatus)">
-                    <label>Update Status</label>
+                    <label style="color: tomato">Update Status</label>
                     <select id="orderStatus"name="orderStatus" ng-model="orderStatus">
                         <option value="processing">Processing</option>
                         <option value="cancelled">Cancel</option>
@@ -28,21 +31,5 @@
                 <li class="list-group-item">Product: {{item.product}}</li>
                 <li class="list-group-item">Quantity: {{item.quantity}}</li>
             </ul>
-            </div>
-
-
-
-  <!--<h3>Current Status: {{ order.status }}</h3>-->
-  <!--<pre>{{ order | json }}</pre>-->
-  <!--<div class="form-group">-->
-    <!--<form name="orderStatusForm" ng-submit="updateOrder(orderStatus)">-->
-      <!--<label>Update Status</label>-->
-      <!--<select id="orderStatus"name="orderStatus" ng-model="orderStatus">-->
-        <!--<option value="processing">Processing</option>-->
-        <!--<option value="cancelled">Cancel</option>-->
-        <!--<option value="completed">Completed</option>-->
-      <!--</select>-->
-      <!--<button type="submit">Submit</button>-->
-    <!--</form>-->
-  <!--</div>-->
-<!--</div>-->
+        </div>
+    </div>
