--- a/browser/js/admin/admin-panel-items/product-item/category.edit.html
+++ b/browser/js/admin/admin-panel-items/product-item/category.edit.html
@@ -1,9 +1,21 @@
 <div>
-    <!--<button ng-if="categories.length == 0" ng-click="addCategory()" style="margin-left:30px" type="button" class="btn-success"> Add Category</button-->
-    <div style="padding-top:10px; margin-left:30px;" class="btn-group btn-group-sm" ng-repeat="category in categories">
-        <button ng-click="deleteCategory(category,categories, id, $index)" type="button" class="btn btn-primary">{{category}}</button>
-        <button ng-if="$index+1 == categories.length" ng-click="addCategory(id)" style="margin-left:30px" type="button" class="btn-success"> Add Category</button>
-
+    <div class="container">
+        <div class="row">
+            <p style="color: tomato">Click Category to Delete</p>
+        </div>
     </div>
+
+
+        <div style="padding-top:10px; margin-left:30px;" class="btn-group btn-group-sm" ng-repeat="category in categories">
+
+            <button ng-click="deleteCategory(category,categories, id, $index)" type="button" class="btn btn-primary">
+                {{category}}
+            </button>
+
+            <button ng-if="$index+1 == categories.length" ng-click="addCategory(id)" style="margin-left:30px" type="button" class="btn-success">
+                Add Category
+            </button>
+
+        </div>
 
     </div>
