Can reset user pw, set admin from user mgmt

--- a/browser/js/admin/admin-panel.html
+++ b/browser/js/admin/admin-panel.html
@@ -54,7 +54,7 @@
                 <div class="form-group">
                     <input id= "search" type="text" class="form-control" placeholder="Search" ng-model="productSearch">
                 </div>
-                <a ui-sref="productAdd">Click to Add a Product</a>
+                <a ui-sref="product-add">Click to Add a Product</a>
             </form>
             <div class="container">
             </div>
