--- a/browser/js/admin/order-detail/order.detail.html
+++ b/browser/js/admin/order-detail/order.detail.html
@@ -1,6 +1,6 @@
 <div>
     <span class="glyphicon glyphicon-menu-left" aria-hidden="true">
-        <a ui-sref="admin-panel">Back</a>
+        <a ui-sref="admin-panel">Back To Admin Home</a>
     </span>
   <h2>Order Detail</h2>
 
