--- a/browser/js/admin/product-add/product.add.html
+++ b/browser/js/admin/product-add/product.add.html
@@ -1,3 +1,7 @@
+<span class="glyphicon glyphicon-menu-left" aria-hidden="true">
+        <a ui-sref="admin-panel">Back To Admin Home</a>
+</span>
+
 <div>
     <div id="messages" class="alert alert-success" data-ng-show="messages" data-ng-bind="messages"></div>
     <form name="addForm" novalidate role="form">
