--- a/browser/js/checkout/checkout.html
+++ b/browser/js/checkout/checkout.html
@@ -24,7 +24,7 @@
         <label for="login-password">Password</label>
         <input type="password" ng-model="login.password" class="form-control" id="login-password" placeholder="Password">
       </div>
-      <button type="submit" class="btn btn-default">Submit</button>
+      <button ng-click="sendLogin(login)" class="btn btn-default">Submit</button>
     </form>
     </div>
 
