made changes to product list

--- a/browser/js/admin/admin-panel-items/product-item/product.item.html
+++ b/browser/js/admin/admin-panel-items/product-item/product.item.html
@@ -12,7 +12,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr ng-repeat="(key,value) in product" ng-if="value | isntArray">
+        <tr ng-repeat="(key,value) in product" ng-if="key | importantCategories"  >
 
             <td>{{key}}</td>
             <td>
