--- a/browser/js/admin/admin-panel.html
+++ b/browser/js/admin/admin-panel.html
@@ -2,13 +2,13 @@
     <div>
         <h1>Admin Panel</h1>
         <ul class="nav nav-pills">
-            <li class="cb" ng-click="showDetails = 'orders'">
+            <li class="cb" ng-click="showDetails = 'orders'" ng-class="{ active: showDetails == 'orders'}" >
                 <a>Orders</a>
             </li>
-            <li class="cb" ng-click="showDetails = 'users'">
+            <li class="cb" ng-click="showDetails = 'users'" ng-class="{ active: showDetails == 'users'}" >
                 <a>Users</a>
             </li>
-            <li class="cb" ng-click="showDetails = 'products'">
+            <li class="cb" ng-click="showDetails = 'products'" ng-class="{ active: showDetails == 'products'}" >
                 <a>Products</a>
             </li>
         </ul>
@@ -16,7 +16,7 @@
 
         <div class="panel panel-info" ng-show="(showDetails=='orders')">
             <div class="panel-heading">
-                <h3 class="panel-title">Orders</h3>
+                <h3 class="panel-title">Order Management</h3>
             </div>
             <div class="row">
                     <div class="col-xs-2" style="margin: 30px">
@@ -39,7 +39,7 @@
 
         <div class="panel panel-info" ng-show="(showDetails=='users')">
             <div class="panel-heading">
-                <h3 class="panel-title">Users</h3>
+                <h3 class="panel-title">User Management</h3>
             </div>
             <div class="panel-body" ng-repeat="user in users">
                 <user-item user="user"></user-item>
