--- a/browser/js/products/product.list.html
+++ b/browser/js/products/product.list.html
@@ -1,18 +1,21 @@
 <div class="product-container">
-  <div>
-    <h1>Product List</h1>
-      <div >
-           <div >
-      <button class="fixed"
-              ng-repeat="category in categories"
-              class="category-button"
-              ng-click="filterByCategory(category)"
-              ng-class="{active: activeCat == category}">{{ category }}
-      </button>
-           </div>
-          <div  ng-repeat="product in products">
-            <product-list product="product"></product-list>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <p class="lead">Categories</p>
+                <div class="list-group" >
+                    <a ng-repeat="category in categories" ng-class="{active: activeCat == category}" ng-click="filterByCategory(category)" href="#" class="list-group-item">{{category}}</a>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-4 col-lg-4 col-md-4" ng-repeat="product in products">
+                    <product-list product="product"></product-list>
+                </div>
+            </div>
+
         </div>
+
     </div>
-  </div>
+
 </div>
